--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -42,11 +42,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-#     - name: Set up JDK 17
-#       uses: actions/setup-java@v2
-#       with:
-#         java-version: 17
-#         distribution: 'adopt'
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'adopt'
+        java-version: '8'
+
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
+
         
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -71,9 +75,9 @@ jobs:
 
     #   If the Autobuild fails above, remove it and uncomment the following three lines. 
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
-
-    - run: |
-       ./InsecureShop-android/gradlew clean build
+    
+    - name: Build SampleApplication
+      run: ./gradlew --no-daemon build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
