--- a/InsecureShop-android/build.gradle
+++ b/InsecureShop-android/build.gradle
@@ -13,6 +13,10 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+          annotationProcessor 'javax.xml.bind:jaxb-api:2.3.1'
+          annotationProcessor 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+          annotationProcessor 'com.sun.xml.bind:jaxb-impl:2.3.2'
     }
 }
 
