--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,6 +29,10 @@ jobs:
       with:
         distribution: 'adopt'
         java-version: '17'
+     - name: Setup Gradle 3.6.3
+       uses: gradle/actions/setup-gradle@v4
+       with:
+         gradle-version: "3.6.3" # Quotes required to prevent YAML converting to number
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
     - name: Initialize CodeQL
@@ -36,6 +40,6 @@ jobs:
       with:
         languages: ${{ matrix.language }}
     - name: Build SampleApplication
-      run: cd InsecureShop-android && ./gradlew --no-daemon build -x lint
+      run: ./gradlew --no-daemon build -x lint
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
