--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -36,6 +36,6 @@ jobs:
       with:
         languages: ${{ matrix.language }}
     - name: Build SampleApplication
-      run: ./gradlew --no-daemon build -x lint
+      run: gradlew --no-daemon build -x lint
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
